<resources>
    <string name="app_name">341Project</string>
    <string name="search">Search</string>
    <string name="events">Events</string>
    <string name="marketplace">Marketplace</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="banner">banner</string>
    <string name="add_photo">Add Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="location">Location</string>
    <string name="job">Job</string>
    <string name="about_you">About You</string>
    <string name="name">Name</string>
    <string name="profile_photo">profile photo</string>
    <string name="todo">TODO</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="cont">Continue</string>
    <string name="i_am">I am…</string>
    <string name="superhero">Superhero</string>
    <string name="kelowna">Kelowna</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="camping">Camping</string>
    <string name="concerts">Concerts</string>
    <string name="fire_warnings">Fire Warnings</string>
    <string name="shoes">Shoes</string>
    <string name="back">Back</string>
    <string name="thurs_april_30th_2020">Thurs April 30th, 2020</string>
    <string name="sun_april_4th_2020">Sun April 4th, 2020</string>
    <string name="downtown_dance_party">Downtown Dance Party</string>
    <string name="ubco_schools_out">UBCO schools out!</string>
    <string name="ubco_online_grad">UBCO online Grad</string>
    <string name="mon_april_24th_2020">Mon April 24th, 2020</string>
    <string name="create_an_event">Create An Event</string>
    <string name="dance_party_img">dance party img</string>
    <string name="online_grad_img">online grad img</string>
    <string name="schools_out_img">schools out img</string>
    <string name="sell_an_item">Sell an Item</string>
    <string name="recently_posted">Recently Posted</string>
    <string name="yellow_t_shirt">Yellow t-shirt</string>
    <string name="i_m_selling_a_lightly_used_t_shirt_great_for_the_summer_10_or_best_offer">I\'m selling a lightly-used t-shirt. Great for the summer! $10 or best offer</string>
    <string name="more">More</string>
    <string name="striped_umbrella">Striped umbrella</string>
    <string name="i_m_selling_a_sun_umbrella_that_is_needed_for_the_summer_sun_20">I\'m selling a sun umbrella that is needed for the summer sun! $20</string>
    <string name="more_info">More info</string>
    <string name="local_marketplace">Local Marketplace</string>
    <string name="t_shirt_img">t-shirt img</string>
    <string name="umbrella_img">umbrella img</string>
    <string name="i_am_looking_for">I am looking for...</string>
    <string name="find_it">Find It!</string>
    <string name="_20">$20</string>
    <string name="_10">$10</string>
    <string name="event_category">Event Category</string>
    <string name="condition">Condition</string>
    <string name="price">Price</string>
    <string name="post_an_item">Post An Item</string>
    <string name="item_name">Item Name</string>
    <string name="dollar">$</string>
    <string name="post_your_item">Post Your Item</string>
    <string name="description">Description</string>
    <string name="my_item_is">My item is...</string>
    <string name="itempic">itempic</string>
    <string name="event_date_dd_mm_yyyy">Event Date\nDD/MM/YYYY</string>
    <string name="event_name">Event Name</string>
    <string name="upload_a_photo">Upload a photo!</string>
    <string name="post_event">Post Event</string>
    <string name="event_description">Event Description</string>
    <string name="results_summer">Results: summer</string>
    <string name="teletubbies">Teletubbies</string>
    <string name="tshirt">tshirt</string>
    <string name="umbrella">umbrella</string>
    <string name="home">Home</string>
    <string name="message_the_seller">Message the seller</string>
    <string name="date_july_11th_2020_n_n_time_5pm_7pm_n_n_location_kelowna_city_park_n_n_price_10_for_adults_5_for_kids">Date: July 11th, 2020 \n \n Time: 5pm-7pm \n \n Location: Kelowna City Park \n \n Price: $10 for adults, $5 for kids</string>
    <string name="bring_the_kids_to_see_the_teletubbies_perform_live_this_summer">Bring the kids to see the Teletubbies perform live this summer!</string>
    <string name="i_m_attending">I\'m Attending!</string>
    <string name="teletubbies_performance">Teletubbies Performance</string>
    <string name="date_sunday_apr_24_2020">Date: Sunday Apr 24, 2020</string>
    <string name="online_grad">Online grad</string>
    <string name="grad">Grad</string>
    <string name="dance_party">Dance Party</string>
    <string name="come_dance">Come dance!</string>
    <string name="date_sunday_apr_4_2020">Date: Sunday Apr 4, 2020</string>
    <string-array name="category">
        <item>Music</item>
        <item>Visual Arts</item>
        <item>Performing Arts</item>
        <item>Film</item>
        <item>Lectures or Books</item>
        <item>Fashion </item>
        <item>Food and Drink</item>
        <item>Festivals and Fairs</item>
        <item>Charities </item>
        <item>Sports and Active Life</item>
        <item>Nightlife </item>
        <item>Kids and Family</item>
        <item>Other </item>
    </string-array>

    <string-array name="condition">
        <item>Very good</item>
        <item>good</item>
        <item>Fair</item>
        <item>Poor</item>
    </string-array>
</resources>
